# ankiwanikanisync

./: .flake8  .gitignore  .htmlhintrc  .mocharc.yml  .nycrc.yml  README.md  allurerc.js  eslint.config.mjs  eslint.config.mts  exec.ts  gulp-prettyerror.d.ts  gulpfile.ts  munge_types.py  package.json  pnpm-lock.yaml  pyproject.toml  stylelint.config.mjs  tsconfig.addon.json  tsconfig.json  wdio.conf.ts
.github/workflows/: tests.yml
@types/gulp-prettyerror/: gulp-prettyerror.d.ts
ankiwanikanisync/: __init__.py  collection.py  config.json  config.py  conftest.py  importer.py  manifest.json  play_all_audio.py  promise.py  promise_asyncio.py  promise_hybrid.py  promise_qt.py  sanity.py  sync.py  timers.py  types.py  ui.py  utils.py  wk_api.py  wk_ctx_parser.py
ankiwanikanisync/data/: common_back.html  common_front.html  meaning_back.html  meaning_front.html  reading_back.html  reading_front.html  style.css  style.scss
ankiwanikanisync/data/files/: _wanakana.min.d.ts  _wanakana.min.js  _wk3_back.ts  _wk3_front.ts  _wk3_util.js  _wk3_util.ts  index.d.ts  types.ts
ankiwanikanisync/pitch/: accent_data.pickle.xz  tenten_types.py  update_accent_data.py
mocha-tests/: utils.test.ts
scripts/: badges.ts  http-zip-server.ts  mocha.ts  munge_types.py  test-status.ts  util.ts
tests/: conftest.py  test_collection.py  test_harness.py  test_importer.py  test_init.py  test_promise.py  test_promise_asyncio.py  test_promise_qt.py  test_sync.py  test_timers.py  test_ui.py  test_unlocking.py  test_wk_api.py  utils.py  wk_session.py
tests/fixtures/: __init__.py  ctxt_patterns_migi.html  srs_1.json  user.json
tests/stubs/aqt/: __init__.py  qt.py  utils.py
tests/stubs/aqt/browser/: browser.py
tests/stubs/aqt/operations/: __init__.py  tag.py
types/eslint-plugin-html/: index.d.ts
types/gulp-prettyerror/: gulp-prettyerror.d.ts
wdio-tests/: answer.test.ts  basic.test.ts  card.ts  contextpatterns.test.ts  fullpage.test.ts  keisei.test.ts  related.test.ts  server.ts  util.ts
wdio-tests/http-root/: index.html
