[project]
name = "ankiwanikanisync-project"
version = "0.1"

[tool.mypy]
check_untyped_defs = true
exclude = [
    "^ankiwanikanisync/deps/",
    "^ankiwanikanisync/pitch/",
    "^bak/",
    "^dist/"
]

[tool.zuban]
warn_unreachable = true

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
preview = true

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E3", "E4", "E5", "E7", "E9", "F", "ISC001", "SIM", "I", "RUF"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

future-annotations = true

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
