[project]
name = "ankiwanikanisync-project"
version = "0.3.0"
requires-python = ">=3.13,<4.0"

dependencies = [
    "aqt (>=25.9.2,<26.0.0)",
    "anki (>=25.9.2,<26.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[dependency-groups]
test = [
    "coverage>=7.13.1",
    "pyfakefs>=6.0.0",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "pytest-xdist>=3.8.0",
    "requests-mock (>=1.12.1,<2.0.0)",
]
dev = [
    "zuban>=0.4.0",
    "pyrate-limiter (>=3.9.0,<4.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "ts2python>=0.8.2",
    "line-profiler>=5.0.0",
    "brotli>=1.2.0",
    "ruff>=0.14.10",
]

[tool.coverage.paths]
source = [
    "ankiwanikanisync/",
    "dist/ankiwanikanisync/",
]

[tool.coverage.report]
exclude_also = [
    'assert_unreachable',
    'raise NotImplementedError',
    '@(abc\.)?abstractmethod',
    '.?# pragma: no ?cover: start(?s:.*?)# pragma: no ?cover: stop',
    '\A(?s:.*# pragma: no ?cover: file.*)\Z',
]
omit = [
    'ankiwanikanisync/conftest.py',
    'ankiwanikanisync/promise_hybrid.py',
    'ankiwanikanisync/sanity.py',
]

[tool.mypy]
check_untyped_defs = true
exclude = [
    "^ankiwanikanisync/deps/",
    "^ankiwanikanisync/pitch/",
    "^bak/",
    "^dist/"
]

[tool.pytest]
asyncio_mode = "auto"
addopts = [
    "--doctest-modules",
    # We need "dist" to appear before "." in `sys.path` so that our add-on
    # modules are imported from dist/ rather than ankiwanikanisync/, where
    # they wouldn't have access to generated resource files. Since our tests
    # end up imported relative to ".", we need the import mode to be "append",
    # or "." ends up at the start of the path, and our tests fail.
    "--import-mode=append",
    # Two workers empirically runs the fastest
    "-n2",
]
norecursedirs = [
    ".venv",
    ".pnpm-store",
    "ankiwanikanisync",
    "bak",
    "dist/ankiwanikanisync/deps",
    "node_modules",
    "scripts",
]
pythonpath = [
    # For our built add-on. If loaded directly from source, it doesn't have
    # access to generated resource files.
    "dist",
    # For stubbed-out aqt modules.
    "tests/stubs",
    # For test modules. We run with `--import-mode=append` so the above
    # directories appear in `sys.path` before ".", but we still want "." to
    # appear before site-packages.
    ".",
]
requests_mock_case_sensitive = true
required_plugins = [
    "pyfakefs",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-qt",
    "pytest-xdist",
    "requests-mock",
]
strict = true

[tool.uv]
default-groups = "all"

[tool.zuban]
warn_unreachable = true

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py313"

exclude = [
    ".venv",
    "ankiwanikanisync/deps",
    "bak",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
preview = true

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E3", "E4", "E5", "E7", "E9", "F", "ISC001", "SIM", "I", "RUF"]
ignore = ["RUF036"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

future-annotations = true

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
